<resources>
    <string name="app_name">CCDroidX</string>

    <string name="build_label">#%s</string>
    <string name="add_new_project">Add New Project</string>
    <string name="select_project">Select Project</string>

    <string name="feed_url">Feed url</string>
    <string name="require_auth">Require Authentication</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="next">Next</string>

    <string name="last_built_x">Last built %s</string>
    <string name="welcome">Welcome!</string>
    <string name="syncing">Syncing…</string>
    <string name="last_synced_x">Last synced %s</string>

    <string name="menu_item_sync_project_status">Sync Project Status</string>
    <string name="menu_item_settings">Settings</string>

    <string name="action_item_project_open_repo">Open repo</string>
    <string name="action_item_project_delete_project">Delete</string>
    <string name="action_item_project_mute">Mute</string>
    <string name="action_item_project_unmute">Unmute</string>

    <string name="confirm_delete_message">This action cannot be reversed. Are you sure you want to delete?</string>
    <string name="confirm_delete_title">Warning</string>

    <string name="error_invalid_url">Invalid url, please confirm that the input is correct</string>
    <string name="error_unsupported_server">Unable to parse the server response, please submit a bug report</string>
    <string name="error_generic">Unknown error occurred. Please try again later</string>
    <string name="error_no_internet">Cannot connect to the server, please confirm you have access to the Internet</string>
    <string name="error_socket_timeout">Timed out connecting server, please try again later</string>
    <string name="error_server_400">400 Bad Request</string>
    <string name="error_server_500">500 Internal Server error</string>
    <string name="error_server_404">404 Not Found</string>
    <string name="error_http">Unknown http error occurred. Please try again later</string>

    <!-- channels -->
    <string name="channel_group_build_alert_name">Build alerts</string>
    <string name="channel_group_build_alert_desc">Notify about build status</string>

    <string name="channel_build_alert_fail_name">Fail builds</string>
    <string name="channel_build_alert_fail_desc">Alert when a build becomes failure or continue to be a failure</string>

    <string name="channel_build_alert_success_after_fail_name">Recovered builds</string>
    <string name="channel_build_alert_success_after_fail_desc">Alert when builds become success after a failure</string>

    <!-- notification -->
    <string name="notification_fail_title">[FAILED] %s</string>
    <string name="notification_fail_content">Tap to open build status page</string>

    <string name="notification_success_after_fail_title">[RECOVERED] %s</string>
    <string name="notification_success_after_fail_content">The build is successful and has recovered from failure</string>

    <string name="notification_prompt_body">Enable notification to receive alerts when your pipelines status changes</string>
    <string name="notification_prompt_enable_notification">Enable notification</string>
    <string name="notification_prompt_close_content_description">Close prompt to enable notification</string>

    <string name="hint_time_unit">Time unit</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="sync_interval_limitation_notice">*Due to background worker limitation on Android, interval cannot be less than 15 minutes</string>

    <string name="error_feed_url_empty_text">Feed url cannot be empty</string>
    <string name="error_feed_url_invalid">The url you entered is invalid</string>
    <string name="error_username_empty_text">Username cannot be empty.</string>
    <string name="error_password_url_empty_text">Password cannot be empty.</string>

    <string-array name="sync_interval_time_units">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>

    <string name="error_interval_empty_text">Value cannot be empty</string>
    <string name="error_interval_non_integer">Value must be numerical</string>
    <string name="error_interval_less_than_minimum">Interval cannot be less than 15 minutes</string>

    <string name="sync_category_title">Sync</string>
    <string name="sync_interval_pref_title">Sync Interval</string>
    <string name="sync_interval_pref_summary">How often CCDroidX retrieves status information from build server</string>
    <string name="sync_interval_input_dialog_title">Update Sync Interval</string>
    <string name="sync_interval_input_dialog_hint_interval_amount">Interval amount in minutes</string>

    <string name="others_category_title">Others</string>
    <string name="others_browser_pref_title">Links open externally</string>

    <string name="help_category_title"><![CDATA[Help & Support]]></string>
    <string name="help_feedback_pref_title">Report a bug</string>
    <string name="help_feedback_pref_summary">Send a feedback or a bug report to make your experience better</string>
    <string name="help_version_title">Version</string>

    <string name="error_no_browser_installed">Unable to open in any browser on your device</string>

    <!--   Widget -->
    <string name="dashboard_widget_description">View your failing pipelines</string>
    <string name="dashboard_widget_title_green">All Green</string>
    <string name="dashboard_widget_title_red">%s Red</string>
</resources>